@@ -1,3 +1,7 @@
+2012-08-??  Francois Vogel  <fvogelnew1@free.fr>
+
+	* generic/tkTextTag.c:  [Bug 3554273]: Test textDisp-32.2 failed
+
 2012-08-03  Francois Vogel  <fvogelnew1@free.fr>
 
 	* tests/bind.test:  [Bug 3554081]: Test bind-22.10 failed
